--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Ysabeau&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 :root {
     --dark-color-1: #334f5a;
@@ -7,11 +7,156 @@
     --light-color-1: #00cccb;
     --light-color-2: #00adac;
     --accent-color: #ffc02b;
+    --gradient-dark-color-1: linear-gradient(to right, #334f5a, #3D788F);
+    --gradient-dark-color-2: linear-gradient(to right, #424242, #676767);
+    --gradient-light-color-1: linear-gradient(to right, #00CCCB, #A5F6F5);
+    --gradient-light-color-2: linear-gradient(to right, #00ACAB, #B0F3F2);
+    --gradient-accent-color: linear-gradient(to right, #FFC02B, #F5E0AE);
+    --dark-color-1-desaturated: #D6DCDE;
+    --dark-color-2-desaturated: #D9D9D9;
+    --light-color-1-desaturated: #CCF5F5;
+    --light-color-2-desaturated: #CCEEEE;
+    --accent-color-desaturated: #FFF2D5;
 }
 
+
 * {
-    /* box-sizing: border-box; */
+    box-sizing: border-box;
 }
+
+
+/*! Imported from Style Guidelines !*/
+
+h1 {
+    font-family: 'Poppins', sans-serif;
+    font-size: 40px;
+}
+
+h2 {
+    font-family: 'Poppins', sans-serif;
+    font-size: 32px;
+    text-align: center;
+}
+
+h3 {
+    font-family: 'Poppins', sans-serif;
+    font-size: 24px;
+    font-weight: 600;
+    text-align: center;
+}
+
+h4 {
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
+}
+
+h5 {
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+h6 {
+    font-family: 'Poppins', sans-serif;
+    font-size: 15px;
+    font-weight: 600;
+}
+
+p {
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
+    line-height: 25px;
+    text-align: justify;
+    margin: 0px;
+    padding: 10px;
+}
+
+p a {
+    color: var(--accent-color);
+}
+
+p strong {
+    color: var(--accent-color);
+    font-weight: 600;
+}
+
+p em {
+    font-style: italic;
+}
+
+/*! Components !*/
+
+button.solid-1 {
+    background-color: var(--dark-color-1);
+    color: #fff;
+    border: none;
+    padding: 10px 20px 10px 20px;
+    font-family: 'Poppins', sans-serif;
+    font-size: 15px;
+    cursor: pointer;
+}
+
+button.solid-1:hover {
+    background-color: #fff;
+    border: 1px solid var(--dark-color-1);
+    color: var(--dark-color-1);
+    box-sizing: border-box;
+}
+
+button.solid-2 {
+    background-color: var(--light-color-1);
+    color: #fff;
+    border: none;
+    padding: 10px 20px 10px 20px;
+    font-family: 'Poppins', sans-serif;
+    font-size: 15px;
+    cursor: pointer;
+}
+
+button.solid-2:hover {
+    background-color: #fff;
+    border: 1px solid var(--light-color-1);
+    color: var(--light-color-1);
+    box-sizing: border-box;
+}
+
+button.solid-3 {
+    background-color: var(--light-color-2);
+    color: #fff;
+    border: none;
+    padding: 10px 20px 10px 20px;
+    font-family: 'Poppins', sans-serif;
+    font-size: 15px;
+    cursor: pointer;
+}
+
+button.solid-3:hover {
+    background-color: #fff;
+    border: 1px solid var(--light-color-2);
+    color: var(--light-color-2);
+    box-sizing: border-box;
+}
+
+button.solid-4 {
+    background-color: var(--accent-color);
+    color: #fff;
+    border: none;
+    padding: 10px 20px 10px 20px;
+    font-family: 'Poppins', sans-serif;
+    font-size: 15px;
+    cursor: pointer;
+}
+
+button.solid-4:hover {
+    background-color: #fff;
+    border: 1px solid var(--accent-color);
+    color: var(--accent-color);
+    box-sizing: border-box;
+}
+
+/*! General !*/
+
+
 
 strong {
     color: var(--accent-color);
@@ -135,6 +280,7 @@ body {
 #banner-button:hover {
     background-color: var(--light-color-1);
     cursor: pointer;
+    transition: 0.1s;
 }
 
 /*! Body: About us!*/
@@ -161,7 +307,7 @@ body {
 
 #about-us div p {
     display: inline-block;
-    /* width: 60%; */
+    width: 60%;
     margin: 20px 0px 20px 0px;
     padding: 0px 20px 0px 20px;
     text-align: justify;
