--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,5 +1,6 @@
 footer {
     background-color: var(--dark-color-1);
+    min-height: fit-content;
 }
 
 #contact-form {
@@ -7,5 +8,18 @@ footer {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-bottom: 20px;
+}
+
+.form-group {
+    width: 20rem;
+}
+
+textarea {
+    resize: none;
+    height: 8rem;
+    width: 20rem;
+}
+
+input {
+    width: 20rem;
 }
