--- a/styles/subscriptions.css
+++ b/styles/subscriptions.css
@@ -29,3 +29,10 @@
     height: 50%;
     padding: 1rem;
 }
+
+.subscription-features {
+    list-style: none;
+    text-align: center;
+    padding: 0;
+    font-size: 15px;
+}
