--- a/styles/subscriptions.css
+++ b/styles/subscriptions.css
@@ -1,16 +1,19 @@
 #subscriptions-container {
     display: flex;
     justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 
 .subscription {
     border: 1px solid var(--accent-color);
-    width: 45%;
+    width: 35%;
+    min-width: 23rem;
     height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin: 1rem;
 
 }
 
